REGRESSION(236463) DownloadManager can call a null CompletionHandler https://bugs.webkit.org/show_bug.cgi?id=196414 <rdar://problem/48389434>

Reviewed by Geoff Garen.

* NetworkProcess/NetworkResourceLoader.cpp:
(WebKit::NetworkResourceLoader::convertToDownload):
DownloadManager::continueDecidePendingDownloadDestination is being called when there is no completion handler.
r236463 introduced an unchecked code path that can allow this to happen.



Canonical link: https://commits.webkit.org/210969@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@244030 268f45cc-cd09-0410-ab3c-d52691b4dbfc